@@ -69,10 +69,10 @@ margin-bottom: 8px;
 			<label for="threeStateNone">-</label>
 
 			<input id="threeStateOnlyList" value="threeStateOnlyList" name="state-d" type="radio" checked="">
-			<label for="threeStateOnlyList">Liste</label>
+			<label for="threeStateOnlyList">Gizli</label>
 
 			<input id="threeStateBoth" value="threeStateBoth" name="state-d" type="radio" checked="checked">
-			<label for="threeStateBoth">Hepsi</label>
+			<label for="threeStateBoth">Açık</label>
 
 			<a></a>
 		</div>
